# src/services/auth/auth.schemas.ts
@@ -2,8 +2,8 @@ import * as Joi from 'joi';
 
 export const authSchemas = { 
   register: Joi.object().keys({ 
-    title: Joi.string().required(),
-    description: Joi.string().required() 
+    email: Joi.string().email().required(),
+    password: Joi.string().required() 
   }) 
   // define all the other schemas below 
 }; 
